# lite-bb

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  marketplace.json  pyproject.toml
.claude-plugin/: marketplace.json
.github/workflows/: claude-review.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: context.rs  main.rs
crates/cli/src/cmd/: api.rs  mod.rs
crates/cli/src/cmd/auth/: login.rs  logout.rs  mod.rs  status.rs
crates/cli/src/cmd/pr/: checkout.rs  checks.rs  close.rs  comment.rs  comments.rs  create.rs  diff.rs  edit.rs  list.rs  merge.rs  mod.rs  reopen.rs  review.rs  view.rs
crates/cli/src/cmd/repo/: clone.rs  create.rs  file.rs  list.rs  mod.rs  view.rs
crates/cli/src/cmd/search/: code.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: git.rs  lib.rs
crates/core/src/api/: client.rs  cloud.rs  mod.rs  pullrequests.rs  server.rs
crates/core/src/auth/: mod.rs
crates/core/src/config/: mod.rs
crates/core/src/models/: mod.rs  repo.rs  search.rs  server.rs
crates/python/: Cargo.toml
crates/python/src/: lib.rs
docs/: bb-agent-reference.md
plugin/.claude-plugin/: plugin.json
skill/skills/bb-cli/: SKILL.md
