[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "lite-bb"
version = "0.1.2"
description = "A gh-style CLI for Bitbucket — PR management for humans, scripts, and LLM agents"
requires-python = ">=3.9"
license = "MIT"
readme = "README.md"
keywords = ["bitbucket", "cli", "pull-request", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Rust",
]

[project.urls]
Homepage = "https://github.com/key4ng/lite-bb"
Repository = "https://github.com/key4ng/lite-bb"

[tool.maturin]
manifest-path = "crates/cli/Cargo.toml"
bindings = "bin"
