[package]
name = "bb-python"
version.workspace = true
edition.workspace = true

[lib]
name = "bb"
crate-type = ["cdylib"]

[dependencies]
bb-core = { path = "../core" }
pyo3 = { version = "0.23", features = ["extension-module"] }
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
